2007-05-01  Nick Treleaven  <nick.treleaven@btinternet.com>

 * geany.gladep:
   Don't regenerate the support.[hc] files, to prevent unnecessary
   rebuilding of files dependent on support.h.
 * src/project.c:
   Hide the unused File Patterns field in the project properties dialog.
 * src/build.c, src/project.c:
   Allow run for any file (with a path) when a valid project run command
   is set.


2007-04-30  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/symbols.c:
   Use g_printerr (if necessary) when generating global tags to convert
   UTF-8 automatically; mark error messages for translation.
 * src/search.c:
   Allow replacing identical text if case sensitive is not checked.
 * src/document.c:
   Fix reloading of read-only documents.
 * src/document.c:
   Make replace all commands report no matches for read-only documents.
 * src/search.c:
   Switch to status window when using Replace In Session to show which
   documents had replacements made.
 * src/search.c:
   Show number of matches when using Mark command.
 * src/utils.h:
   Add NZV() macro for checking a char* points to a non-empty string.
 * src/build.c:
   Disable the Build Includes run command field when there is a project
   open with a valid run command set.


2007-04-29  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/interface.c, geany.glade:
   Rename 'tabulators' 'tabs'.
 * src/ui_utils.h, src/search.c, src/ui_utils.c:
   Add ui_path_box_new() for creating a path text entry with an open
   button, which runs a file chooser to set the text entry.
   Add ui_setup_open_button_callback() for setting up a button callback
   that behaves like the open button in ui_path_box_new().
   Use ui_path_box_new() in FIF dialog setup.
 * src/interface.c, src/project.c, src/project.h, src/prefs.c,
   geany.glade:
   Add project file path preferences option in General tab.


2007-04-29  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/geany.h: Changed default browser to firefox.

